--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,15 +13,17 @@ name = "wsl_terminal_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2" }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2" }
+tauri = { version = "2", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-shell = "2"
 tokio = { version = "1", features = ["full"] }
 toml = "0.8"
 dirs = "6"
+portable-pty = "0.8"
+anyhow = "1.0"
