--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
       - 'v*'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build-windows:
     runs-on: windows-latest
@@ -18,12 +21,17 @@ jobs:
           node-version: '20'
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
         with:
           version: 9
 
-      - name: Setup Rust
-        uses: dtolnay/rust-action@stable
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
+        with:
+          workspaces: './src-tauri -> target'
 
       - name: Install dependencies
         run: pnpm install
@@ -33,8 +41,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tagName: ${{ github.ref_name }}
-          releaseName: 'WSL Terminal ${{ github.ref_name }}'
-          releaseBody: 'See the assets to download and install this version.'
-          releaseDraft: true
+          tagName: v__VERSION__
+          releaseName: 'WSL Terminal v__VERSION__'
+          releaseBody: |
+            ## WSL Terminal
+
+            A modern terminal emulator for WSL2 with multi-tab support.
+
+            ### Features
+            - WSL, PowerShell, CMD support
+            - Multiple themes (Catppuccin, Dracula, Nord, Cyberpunk, etc.)
+            - Tab colors and rename
+            - Keyboard shortcuts
+
+            ### Download
+            - `.msi` - Windows Installer
+            - `.exe` - NSIS Installer
+          releaseDraft: false
           prerelease: false
