--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wsl-terminal",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Modern WSL terminal emulator built with Tauri",
   "type": "module",
   "scripts": {
@@ -25,6 +25,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tauri-apps/plugin-clipboard-manager": "^2.3.2",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
