--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ log = "0.4"
 tauri = { version = "2", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-shell = "2"
+tauri-plugin-clipboard-manager = "2"
 tokio = { version = "1", features = ["full"] }
 toml = "0.8"
 dirs = "6"
