feat(phase2): complete Phase 2 features
- Search: Ctrl+F with xterm addon-search
- Git status: branch, dirty indicator, ahead/behind in StatusBar
- Ligatures: Fira Code support via xterm addon-ligatures
- Split panes: Ctrl+Shift+D (vertical), Ctrl+Shift+E (horizontal)
- Command palette: Ctrl+Shift+P with fuzzy search
- Quake mode: dropdown terminal with configurable hotkey
- SSH manager: sidebar with persistent connections
- Notifications: alerts for long-running commands (>5s)

Bump version to v0.3.0

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wsl-terminal"
-version = "0.2.0"
+version = "0.3.0"
 description = "Modern WSL terminal emulator"
 authors = []
 license = "MIT"
@@ -23,6 +23,8 @@ tauri = { version = "2", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-shell = "2"
 tauri-plugin-clipboard-manager = "2"
+tauri-plugin-global-shortcut = "2"
+tauri-plugin-notification = "2"
 tokio = { version = "1", features = ["full"] }
 toml = "0.8"
 dirs = "6"
