--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wsl-terminal",
-  "version": "0.2.6",
+  "version": "0.3.0",
   "description": "Modern WSL terminal emulator built with Tauri",
   "type": "module",
   "scripts": {
@@ -26,7 +26,11 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tauri-apps/plugin-clipboard-manager": "^2.3.2",
+    "@tauri-apps/plugin-global-shortcut": "^2.3.1",
+    "@tauri-apps/plugin-notification": "^2.3.3",
     "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-ligatures": "^0.9.0",
+    "@xterm/addon-search": "^0.15.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +39,7 @@
     "lucide-react": "^0.556.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-resizable-panels": "^3.0.6",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   },
